[project]
name = "hackviz-2025-vroger11"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.0.1",
    "plotly>=6.0.0",
    "statsmodels>=0.14.4",
    "streamlit>=1.42.2",
]

[dependency-groups]
dev = [
    "ruff>=0.9.9",
]
